# vsphere-guest-run

./: .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  LICENSE.txt  NOTICE.txt  README.md  publish.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
docs/: README.md
tests/: run-cmd.py  script.sh
vsphere_guest_run/: vgr.py  vsphere.py
