# vsphere-guest-run
# Copyright (c) 2017 VMware, Inc. All Rights Reserved.
# SPDX-License-Identifier: BSD-2-Clause

[metadata]
name = vsphere-guest-run
summary = vSphere Guest Run
description-file = README.md
author = Paco Gomez
author_email = pgomez@vmware.com
url = https://github.com/vmware/vsphere-guest-run
classifier =
	Environment :: Console
	Intended Audience :: System Administrators
	Intended Audience :: Developers
	Operating System :: POSIX :: Linux
	Operating System :: MacOS :: MacOS X
	Operating System :: Microsoft :: Windows
	Programming Language :: Python
	Programming Language :: Python :: 3
requires-python = >=3

[files]
packages =
	vsphere_guest_run

[entry_points]
console_scripts =
	vgr = vsphere_guest_run.vgr:vgr
